Adding doc for deploying to Scribengin cluster