@@ -7,12 +7,13 @@
   - [Creating a Simple DataStreamOperator](#creating-a-simple-dataStreamOperator)
   - [Create a Simple DataflowSubmitter](#create-a-simple-dataflowSubmitter)
   - [Create a Unit Test](#create-a-unit-test)
+  - [Launching in a real Scribengin Cluster](#launching-in-a-real-scribengin-cluster)
 
 #Introduction#
 
 This howto will show you how to develop your own dataflow and operator.  You will then learn how to submit your dataflow to Scribengin to be run.  
 
-##Sample code##
+#Sample code#
 You can find sample code in the Scribengin package com.neverwinterdp.scribengin.example.*. The code comes complete with unit tests and full comments.
 
 #A Simple Dataflow
@@ -91,7 +92,6 @@ public class ExampleSimpleDataflowSubmitter {
   private String dataflowID;
   private int defaultReplication;
   private int defaultParallelism;
-  private int maxRunTime;
   
   private int numOfWorker;
   private int numOfExecutorPerWorker;
@@ -122,11 +122,9 @@ public class ExampleSimpleDataflowSubmitter {
     defaultReplication = Integer.parseInt(props.getProperty("dataflow.replication", "1"));
     //The number of DataStreams to deploy 
     defaultParallelism = Integer.parseInt(props.getProperty("dataflow.parallelism", "8"));
-    //Max amount of time (in ms) to run the dataflow 
-    maxRunTime         = Integer.parseInt(props.getProperty("dataflow.maxRunTime", "10000"));
     
     //The number of workers to deploy (i.e. YARN containers)
-    numOfWorker                = Integer.parseInt(props.getProperty("dataflow.numWorker", "4"));
+    numOfWorker                = Integer.parseInt(props.getProperty("dataflow.numWorker", "2"));
     //The number of executors per worker (i.e. threads per YARN container)
     numOfExecutorPerWorker     = Integer.parseInt(props.getProperty("dataflow.numExecutorPerWorker", "2"));
     
@@ -176,8 +174,7 @@ public class ExampleSimpleDataflowSubmitter {
     Dataflow<Message,Message> dfl = new Dataflow<Message,Message>(dataflowID);
     dfl.
       setDefaultParallelism(defaultParallelism).
-      setDefaultReplication(defaultReplication).
-      setMaxRuntime(maxRunTime);
+      setDefaultReplication(defaultReplication);
     
     dfl.getWorkerDescriptor().setNumOfInstances(numOfWorker);
     dfl.getWorkerDescriptor().setNumOfExecutor(numOfExecutorPerWorker);
@@ -315,7 +312,7 @@ public class ExampleSimpleDataflowSubmitterTest {
     int numReceived = 0;
     boolean[] assertionArray = new boolean[numMessages];
     
-    //while(it.hasNext()){
+    
     for(int i = 0; i < numMessages; i++){
       //This is how we serialize our data back into our Messsage object
       Message message = JSONSerializer.INSTANCE.fromBytes(it.next().message(), Message.class);
@@ -365,5 +362,160 @@ public class ExampleSimpleDataflowSubmitterTest {
 }
 
 ```
+
+##Launching in a real Scribengin Cluster
+
+Launching in a real cluster will take one last step.  Below, we'll see the code required to push our dataflow configuration to Scribengin.  We'll need a few key pieces of information - You'll need to specify the [host]:[port] of Scribengin's Registry (Zookeeper) as well as any dataflow configuration.  The following example sets defaults, but uses JCommander to pass options on the command line.
+
+
+###The Code
+```java
+package com.neverwinterdp.scribengin.dataflow.example.simple;
+
+import java.util.Properties;
+
+import com.beust.jcommander.JCommander;
+import com.beust.jcommander.Parameter;
+import com.neverwinterdp.registry.Registry;
+import com.neverwinterdp.registry.RegistryConfig;
+import com.neverwinterdp.registry.zk.RegistryImpl;
+import com.neverwinterdp.scribengin.shell.ScribenginShell;
+import com.neverwinterdp.vm.HadoopProperties;
+import com.neverwinterdp.vm.VMConfig;
+import com.neverwinterdp.vm.client.YarnVMClient;
+
+/**
+ * Example class of how to launch your dataflow on a real instance of Scribengin running in YARN
+ *
+ */
+public class ExampleSimpleDataflowSubmitterYARN {
+  
+  /**
+   * Simple class to house our configuration options for JCommander 
+   * 
+   */
+  static class Settings {
+
+    @Parameter(names = {"--help", "-h"}, help = true, description = "Output this help message")
+    private boolean help;
+    
+    @Parameter(names = "--dataflow-id", description = "Unique ID for the dataflow")
+    private String dataflowId        = "ExampleDataflow";
+    
+    @Parameter(names = "--zkConnect", description="[host]:[port] of Zookeeper server")
+    private String zkConnect = "zookeeper-1:2181";
+    
+    @Parameter(names = "--hadoopMasterConnect", description="hostname of HadoopMaster")
+    private String hadoopMasterConnect = "hadoop-master";
+    
+    @Parameter(names = "--kafkaConnect", description="[host]:[port] of kafka broker")
+    private String kafkaConnect = "kafka-1:9092";
+    
+    @Parameter(names = "--kafkaReplication", description = "Kafka replication")
+    private String kafkaReplication = "1";
+    
+    @Parameter(names = "--streamParallelism", description = "Number of Streams for Scribengin to deploy")
+    private String streamParallelism = "8";
+    
+    @Parameter(names = "--numOfWorker", description = "Number of workers to request")
+    private String numOfWorker = "2";
+    
+    @Parameter(names = "--numOfExecutorPerWorker", description = "Number of Executors per worker to request")
+    private String numOfExecutorPerWorker     = "2";
+    
+    @Parameter(names = "--inputTopic", description = "Name of input Kafka Topic")
+    private String inputTopic = "input.topic";
+    
+    @Parameter(names = "--outputTopic", description = "Name of output Kafka topic")
+    private String outputTopic ="output.topic";
+
+  }
+  
+  
+  public static void main(String args[]) throws Exception {
+    //Use JCommander to parse command line args
+    Settings settings = new Settings();
+    JCommander j = new JCommander(settings, args);
+    
+    if (settings.help) {
+      j.usage();
+      return;
+    }
+    
+    //Create a registry configuration and point it to our running Registry (Zookeeper)
+    RegistryConfig registryConfig = RegistryConfig.getDefault();
+    registryConfig.setConnect(settings.zkConnect);
+    Registry registry = null;
+    try{
+      registry = new RegistryImpl(registryConfig).connect();
+    } catch(Exception e){
+      System.err.println("Could not connect to the registry at: "+ registryConfig.getConnect()+"\n"+e.getMessage());
+      return;
+    }
+    
+    //Configure where our hadoop master lives
+    String hadoopMaster = settings.hadoopMasterConnect;
+    HadoopProperties hadoopProps = new HadoopProperties() ;
+    hadoopProps.put("yarn.resourcemanager.address", hadoopMaster + ":8032");
+    hadoopProps.put("fs.defaultFS", "hdfs://" + hadoopMaster +":9000");
+    
+    //Set up our connection to Scribengin
+    YarnVMClient vmClient = new YarnVMClient(registry, VMConfig.ClusterEnvironment.YARN, hadoopProps) ;
+    ScribenginShell shell = new ScribenginShell(vmClient) ;
+    shell.attribute(HadoopProperties.class, hadoopProps);
+    
+    //Configure our dataflow
+    Properties props = new Properties();
+    props.put("dataflow.id", settings.dataflowId);
+    props.put("dataflow.replication", settings.kafkaReplication); 
+    props.put("dataflow.parallelism", settings.streamParallelism); 
+    props.put("dataflow.numWorker", settings.numOfWorker);
+    props.put("dataflow.numExecutorPerWorker", settings.numOfExecutorPerWorker);
+    props.put("dataflow.inputTopic", settings.inputTopic);
+    props.put("dataflow.outputTopic", settings.outputTopic);
+    
+    //Launch our configured dataflow
+    ExampleSimpleDataflowSubmitter esds = new ExampleSimpleDataflowSubmitter(shell, new Properties());
+    esds.submitDataflow(settings.kafkaConnect);
+    
+    //Get some info on the running dataflow
+    shell.execute("dataflow info --dataflow-id "+settings.dataflowId+" --show-all");
+    
+    //Close connection with Scribengin
+    shell.close();
+  }
+
+}
+
+```
+
+
+###Building
+
+We'll build our dataflow and Scribengin
+
+```
+cd NeverwinterDP
+./gradlew clean build install release -x test
+```
+
+
+###Deploying
+
+[Follow the instructions on how to start Scribengin here](../scribengin-cluster-setup-quickstart.md#arbitrary-cluster-setup)
+
+###Running
+
+Once Scribengin is up and running in YARN, we'll use this to execute.  If you push data into the Kafka Input Topic, you should be able to watch the configured Kafka Output Topic get filled with the same data
+
+```
+export LIB_DIR=/full/path/to/NeverwinterDP/release/build/release/neverwinterdp/scribengin/libs
+
+#Other options can be seen by running with --help option
+java -Djava.ext.dirs=$LIB_DIR:/jre/lib/ext -Xshare:auto -Xms128m -Xmx1536m -XX:-UseSplitVerifier \
+com.neverwinterdp.scribengin.dataflow.example.simple.ExampleSimpleDataflowSubmitterYARN \
+--dataflow-id dataflowName --zkConnect 1.1.1.1:2181 --hadoopMasterConnect 2.2.2.2 --kafkaConnect 3.3.3.3:9092
+```
+
 
 
